include_directories (. ../src/ ../include)

link_libraries(boost_unit_test_framework classical ${LIBS})
add_executable(params_tests ${COMMON} params_tests.cpp)
add_executable(field_tests ${COMMON} field_tests.cpp)
add_executable(icgen_tests ${COMMON} icgen_tests.cpp)
add_executable(timer_tests ${COMMON} timer_tests.cpp)
add_executable(coords_tests ${COMMON} coords_tests.cpp)
add_executable(zeros_tests ${COMMON} zeros_tests.cpp)
add_executable(integrator_tests ${COMMON} integrator_tests.cpp)
add_executable(binner_tests ${COMMON} binner_tests.cpp)
add_executable(sim_tests ${COMMON} sim_tests.cpp)
ENABLE_TESTING()
ADD_TEST(params_tests params_tests)
ADD_TEST(field_tests field_tests)
ADD_TEST(icgen_tests icgen_tests)
ADD_TEST(coords_tests coords_tests)
ADD_TEST(timer_tests timer_tests)
ADD_TEST(zeros_tests zeros_tests)
ADD_TEST(integrator_tests integrator_tests)
ADD_TEST(binner_tests binner_tests)
ADD_TEST(sim_tests sim_tests)
